[package]
name = "dioxus-visu-graphe"
version = "0.1.0"
authors = ["rambip <apero1808@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
async-std = "1.12.0"
serde_json = "1.0.120"
kurbo = {version="0.11.0", features=["serde"]}
serde = "1.0.203"
# gloo-worker = {version="0.5.0", features=["futures"]}
rust-lapper = { version = "1.1.0", features = ["with_serde"] }
